[gd_scene load_steps=17 format=2]

[ext_resource path="res://Assets/saint_martyr/saintmartyr.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/kingthings-trypewriter-2/Kingthings Trypewriter 2.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/GUI_set_01_v2_0/9-slice frames/frame1_c2.png" type="Texture" id=3]
[ext_resource path="res://Assets/GUI_set_01_v2_0/9-slice buttons/button_c2_normal.png" type="Texture" id=4]
[ext_resource path="res://Assets/GUI_set_01_v2_0/9-slice buttons/button_c2_pressed.png" type="Texture" id=5]
[ext_resource path="res://Assets/GUI_set_01_v2_0/9-slice buttons/button_c2_mouseover.png" type="Texture" id=6]
[ext_resource path="res://Assets/uipack_fixed/Bonus/switch2.ogg" type="AudioStream" id=7]
[ext_resource path="res://Scripts/FinalWords.gd" type="Script" id=8]

[sub_resource type="DynamicFont" id=1]
size = 120
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 48, 48 )
margin_left = 5.0
margin_right = 5.0
margin_top = 5.0
margin_bottom = 5.0

[sub_resource type="DynamicFont" id=3]
size = 80
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 48
extra_spacing_top = 5
extra_spacing_bottom = 5
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxTexture" id=6]
content_margin_left = 16.0
content_margin_right = 16.0
content_margin_top = 6.0
content_margin_bottom = 6.0
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 48, 48 )
margin_left = 9.0
margin_right = 9.0
margin_top = 14.0
margin_bottom = 14.0

[sub_resource type="StyleBoxTexture" id=7]
content_margin_left = 16.0
content_margin_right = 16.0
content_margin_top = 6.0
content_margin_bottom = 6.0
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 48, 48 )
margin_left = 9.0
margin_right = 9.0
margin_top = 14.0
margin_bottom = 14.0

[sub_resource type="StyleBoxTexture" id=8]
content_margin_left = 16.0
content_margin_right = 16.0
content_margin_top = 6.0
content_margin_bottom = 6.0
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 48, 48 )
margin_left = 9.0
margin_right = 9.0
margin_top = 14.0
margin_bottom = 14.0

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.113725, 0.113725, 0.109804, 1 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -230.0
margin_right = 230.0
margin_bottom = 128.0
custom_fonts/font = SubResource( 1 )
text = "Mission Success"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 18.0
margin_top = 352.0
margin_right = 1902.0
margin_bottom = 727.0
alignment = 1

[node name="Label2" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 1884.0
margin_bottom = 193.0
custom_fonts/font = SubResource( 2 )
text = "You have been successful in your mission to defeat the EVIL EMPIRE.
The future of the GOOD GUYS is secure. You can be proud of your accomplishments.

Eagles fly above you,"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer/VBoxContainer"]
margin_left = 679.0
margin_top = 197.0
margin_right = 1205.0
margin_bottom = 297.0
size_flags_horizontal = 4
custom_styles/panel = SubResource( 4 )

[node name="PlayerName" type="Label" parent="CenterContainer/VBoxContainer/PanelContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 521.0
margin_bottom = 95.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "PLAYER NAME"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EndGame" type="Button" parent="CenterContainer/VBoxContainer"]
margin_left = 870.0
margin_top = 301.0
margin_right = 1013.0
margin_bottom = 375.0
focus_mode = 0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 5 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
enabled_focus_mode = 0
text = "End Game"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[connection signal="button_down" from="CenterContainer/VBoxContainer/EndGame" to="." method="_on_EndGame_button_down"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/EndGame" to="." method="_on_EndGame_pressed"]
